assets/vpc-lattice/vpc-lattice-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: ts-node-express
  namespace: example
spec:
  parentRefs:
    - name: example-network
      sectionName: tls-with-default-domain
  rules:
    - backendRefs:
        - name: ts-node-express
          kind: Service
          port: 8000
          namespace: example
      matches:
        - path:
            type: PathPrefix
            value: /
